<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_pokedex">


    <ImageView
        android:id="@+id/start"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estrella" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />


    <ImageView
        android:id="@+id/pokemon_principal"
        android:layout_width="291dp"
        android:layout_height="254dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/charmander" />

    <TextView
        android:id="@+id/num_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="#2"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/nombre_pokemon"
        app:layout_constraintTop_toBottomOf="@+id/nombre_pokemon" />

    <ImageView
        android:id="@+id/pokebola"
        android:layout_width="128dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:srcCompat="@drawable/pokeball" />

    <TextView
        android:id="@+id/nombre_pokemon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="148dp"
        android:text="@string/charmander"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center_vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_principal"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backgroundwhite" />

    <Button
        android:id="@+id/tipo_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red"
        android:checkable="false"
        android:clickable="false"
        android:text="@string/tipo_charmander"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="295dp"
        android:text="Altura"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card" />

    <TextView
        android:id="@+id/Peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="295dp"
        android:text="Peso"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altura" />

    <TextView
        android:id="@+id/habilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="80dp"
        android:text="habilidad"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card" />

    <ImageView
        android:id="@+id/bulbasaur"
        android:layout_width="167dp"
        android:layout_height="180dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="285dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bulbasaur" />

    <ImageView
        android:id="@+id/squirtle"
        android:layout_width="109dp"
        android:layout_height="258dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card"
        app:layout_constraintVertical_bias="0.506"
        app:srcCompat="@drawable/squirtle" />

    <TextView
        android:id="@+id/nombre_pokemon_ant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:text="@string/bulbasaur"
        app:layout_constraintEnd_toEndOf="@+id/bulbasaur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bulbasaur" />

    <TextView
        android:id="@+id/nombre_pokemon_sig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-68dp"
        android:text="@string/squirtle"
        app:layout_constraintEnd_toEndOf="@+id/squirtle"
        app:layout_constraintStart_toStartOf="@+id/squirtle"
        app:layout_constraintTop_toBottomOf="@+id/squirtle" />

    <TextView
        android:id="@+id/altura_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="295dp"
        android:text="0,6 m"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="250dp"
        android:text="8,5 kg"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card" />

    <TextView
        android:id="@+id/descripcion_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_charmander"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_card" />

    <TextView
        android:id="@+id/habilidad_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/habilidad_charmander"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habilidad" />

</androidx.constraintlayout.widget.ConstraintLayout>